...
  }, [navigation]);

  useEffect(() => {
    setOrderPrice(global.price);
  }, []);

  const confirmOrder = () => {
    console.log(JSON.stringify(order));
    ApiService.orders
      .create(order)
      .then(() => {
        navigation.navigate('Restaurants');
      })
...
