...
          />
          {checkoutButtonVisible && (
            <Pressable
              onPress={() => {
                navigation.navigate('Checkout', {order: order});
              }}
              testID="goToCheckout">
              <View style={tailwind('bg-blue-500 p-4 mb-6')}>
                <View style={tailwind('flex-row justify-between')}>
                  <Text style={tailwind('text-white text-base')}>
                    Go to checkout
                  </Text>
                  <Text style={tailwind('text-white text-base')}>
...
